--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -14,7 +14,11 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "server.js"
+            "dest": "server.js",
+            "method":["GET", "POST"],
+            "headers":{
+                "Access-Control-Allow-Origin":"*"
+            }
         }
     ]
 }
